Removed unnecessary new object everytime